--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="dasha.css">
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="dasha.js">
+    <link rel="stylesheet" href="js.js">
 
     <style>
         a {
